tests/niminaction/Chapter2/no_seq_type.nim
discard """
  errormsg: "cannot infer the type of the sequence"
  line: 6
"""

var list = @[]
